# mzbot-v2

./: .env  .replit  CONTRIBUTING.md  LICENSE.txt  README.md  bot.py  firebaseconfig.py  keep_alive.py  main.py  moderation_rules.py  mzdependencies.py  mzhelp.py  mzutils.py  nitrogenlist.txt  notes_replit.md  package-lock.json  package.json  pyproject.toml  replit.nix  requirements.txt
.github/workflows/: python-app.yml
src/: main.py  moderation_rules.py  mzhelp.py  mzutils.py  nitrogenlist.txt  optoutspam.txt
