[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9.6"
numpy = "^1.22.2"
replit = "^3.2.4"
Flask = "^2.2.0"
discord = "^2.0"
python-dotenv = "^0.19.0"
dnspython = "^1.16.0"
PyNaCl = "^1.3.0"
async-timeout = "^3.0.1"
requests = "^2.28.0"
discord-webhook = "^0.16.3"
psutil = "^5.9.1"
pytz = "^2022.1"
futures = "<3.0.0"
PyDictionary = "2.0.1"
youtube-dl = "2021.2.10"
speedtest-cli = "^2.1.3"
roblox = "^2.0.0"
aiohttp = "^3.7.4"
firebase-admin = "^6.0.1"
GitPython = "^3.1.29"
ffmpeg = "^1.4"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.0"}
toml = "^0.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
